Table users {
  id int [pk, increment]
  username varchar(50) [not null, unique]
  email varchar(255) [not null]
  password_hash varchar(255) [not null]
  created_at datetime [not null, default: 'now()']
  updated_at datetime
  is_active bit [not null, default: true]
}

Table posts {
  id int [pk, increment]
  title varchar(255) [not null]
  content text
  user_id int [not null]
  published_at datetime
  created_at datetime [not null, default: 'now()']
  updated_at datetime
}

Table comments {
  id int [pk, increment]
  content text [not null]
  post_id int [not null]
  user_id int [not null]
  created_at datetime [not null, default: 'now()']
}

Ref: posts.user_id > users.id
Ref: comments.post_id > posts.id
Ref: comments.user_id > users.id
